fix prevArrow in sideSlider, fix bottom gap in sideSlider

--- a/src/assets/scss/partials/_slider.scss
+++ b/src/assets/scss/partials/_slider.scss
@@ -22,4 +22,7 @@
       }
     }
   }
+  .slick-arrow.slick-prev {
+    display: none !important;
+  }
 }
